NetBSD Problem Report #57500

From www@netbsd.org  Mon Jul  3 18:37:21 2023
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 700BE1A923D
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  3 Jul 2023 18:37:21 +0000 (UTC)
Message-Id: <20230703183720.017051A923E@mollari.NetBSD.org>
Date: Mon,  3 Jul 2023 18:37:19 +0000 (UTC)
From: palle@lyckegaard.dk
Reply-To: palle@lyckegaard.dk
To: gnats-bugs@NetBSD.org
Subject: tools/compat/regex.h - missing tools/compat/regex.h
X-Send-Pr-Version: www-1.0

>Number:         57500
>Category:       toolchain
>Synopsis:       tools/compat/regex.h - missing tools/compat/regex.h
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    christos
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Jul 03 18:40:00 +0000 2023
>Closed-Date:    Wed Jul 05 16:23:35 +0000 2023
>Last-Modified:  Wed Jul 05 16:25:01 +0000 2023
>Originator:     Palle Lyckegaard
>Release:        current
>Organization:
NetBSD
>Environment:
SunOS gcc106.fsffrance.org 5.11 11.4.57.144.3 sun4v sparc sun4v logical-domain

>Description:
The __BEGIN_DECLS__ and __END_DECLS__ macros are not present unless nbtool_config.h is included


>How-To-Repeat:
Issue a build.sh run on a Solaris 11.4 system




>Fix:
diff --git a/tools/compat/regex.h b/tools/compat/regex.h                                                                                                                                                           
index 1619a9da6094..5d2758684878 100644                                                                                                                                                                            
--- a/tools/compat/regex.h                                                                                                                                                                                         
+++ b/tools/compat/regex.h                                                                                                                                                                                         
@@ -1,3 +1,6 @@                                                                                                                                                                                                    
+                                                                                                                                                                                                                  
+                                                                                                                                                                                                                  
 /*     $NetBSD: regex.h,v 1.5 2018/03/11 18:32:43 christos Exp $ */                                                                                                                                               

+#include "nbtool_config.h"                                                                                                                                                                                        
 #include "../../include/regex.h"                                                                                                                                                                                  


>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/57500 CVS commit: src/tools/compat
Date: Mon, 3 Jul 2023 14:50:42 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Mon Jul  3 18:50:42 UTC 2023

 Modified Files:
 	src/tools/compat: regex.h

 Log Message:
 PR/57500: Palle Lyckegaard: include missing tools/compat/regex.h for
 __{BEGIN,END}_DECLS.


 To generate a diff of this commit:
 cvs rdiff -u -r1.5 -r1.6 src/tools/compat/regex.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: lukem@NetBSD.org
State-Changed-When: Tue, 04 Jul 2023 10:13:37 +0000
State-Changed-Why:
did Christos' recent commit resolve this?


Responsible-Changed-From-To: toolchain-manager->christos
Responsible-Changed-By: lukem@NetBSD.org
Responsible-Changed-When: Wed, 05 Jul 2023 16:23:35 +0000
Responsible-Changed-Why:
Christos fixed it, so he get the credit


State-Changed-From-To: feedback->closed
State-Changed-By: lukem@NetBSD.org
State-Changed-When: Wed, 05 Jul 2023 16:23:35 +0000
State-Changed-Why:
Submitter confirmed the fix


From: Palle Lyckegaard <palle@lyckegaard.dk>
To: gnats-bugs@netbsd.org
Cc: toolchain-manager@netbsd.org, netbsd-bugs@netbsd.org,
        gnats-admin@netbsd.org, lukem@NetBSD.org
Subject: Re: toolchain/57500 (tools/compat/regex.h - missing
 tools/compat/regex.h)
Date: Wed, 5 Jul 2023 16:21:20 +0000 (UTC)

 On Tue, 4 Jul 2023, lukem@NetBSD.org wrote:

 > did Christos' recent commit resolve this?
 >


 yes - works as expected - thanks :-)

 Regards
 palle@netbsd.org

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2023 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.