PR/57500: Palle Lyckegaard: include missing tools/compat/regex.h for __{BEGIN,END}_DECLS.